# fortplot

./: .codecov.yml  .dockerignore  .f2py_f2cmap  .gitignore  AGENT.md  AGENTS.md  AVI.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COUPLING_REDUCTION_SUMMARY.md  DEAD_CODE_EVIDENCE_REPORT.md  DESIGN.md  Dockerfile  FAIL.md  GITHUB_ISSUE_26_UPDATE.md  HANDBACK_SERGEI.md  ISSUE_26_REPLACEMENT_TEXT.md  ISSUE_TEXT_MISSING_JPG.md  JPEG.md  JPEG_STATUS.md  MPEG_ISSUE_26_COMPLETION.md  MPEG_PROGRESS_UPDATE.md  MPEG_STATUS.md  Makefile  OPTIMIZATION_REPORT.md  PNG_VALIDATION_FINDINGS.md  README.md  REORGANIZATION_SUMMARY.md  RESCUE_LOG.md  SCATTER_IMPLEMENTATION_PLAN.md  SOLUTION.md  TESTS.md  TODO.md  UNICODE.md  WARNINGS.md  WARNING_REDUCTION_EVIDENCE.md  analyze_patterns.py  bar_chart_demo_temp  (+52 more)
.github/: PULL_REQUEST_TEMPLATE.md
app/: analyze_huffman_difference.f90  analyze_jpeg_scan_data.f90  analyze_jpeg_structure.f90  analyze_mpeg_headers.f90  analyze_mpeg_headers_proper.f90  compare_jpeg_tables.f90  debug_16x16.f90  debug_16x16_gray.f90  debug_16x16_q95.f90  debug_2d_scatter.f90  debug_3d_coords.f90  debug_3d_data_bounds.f90  debug_3d_edges.f90  debug_3d_marker_visible.f90  debug_3d_projection.f90  debug_8x8_encoding.f90  debug_ac_coefficients.f90  debug_ac_loop_issue.f90  debug_ac_loop_logic.f90  debug_actual_streamlines.f90  debug_ascii_legend.f90  debug_axis_spaces.f90  debug_bit_analysis.f90  debug_bit_count.f90  debug_bit_counting.f90  debug_bit_order.f90  debug_bit_position.f90  debug_bit_positions.f90  debug_bit_sequence.f90  debug_bit_trace.f90  debug_bit_trace_detailed.f90  debug_bit_writer.f90  debug_bitmap_rotation.f90  debug_bitmap_visual.f90  debug_block_count.f90  debug_block_encoding.f90  debug_block_order.f90  debug_block_processing.f90  debug_buffer_analysis.f90  debug_buffer_issue.f90  (+190 more)
cmake/: PythonHelpers.cmake  fortplotConfig.cmake.in
coverage_html/: index-sort-f.html  index-sort-l.html  index.html
doc/: RELEASES.md  api_compatibility.md  ascii_output_format.md  background.md  index.md  module_architecture.md  mpeg_validation.md  oo_stateful_compatibility.md  requirements-doc.txt  scatter_advanced.md  scatter_plot_guide.md  scatter_tutorial.md  security.md  subplots_function.md  surface_plot_guide.md  testing_guide.md  truetype_port.md  unicode_support.md  user_compilation_guide.md  warning_system.md  windows_ci_performance.md  windows_ffmpeg_setup.md
doc/cmake_example/: CMakeLists.txt  index.md  main.f90
docs/: CONTAINER.md  font_backend_selection.md  freetype_linux_distributions.md  implementation_plan_issue_19.md
example/: disconnected_lines.f90  format_string_demo.f90  freetype_detection_demo.f90  generate_example_docs.f90  generate_example_docs.f90.disabled  jpeg_demo.f90  jpeg_quality_demo.f90  label_positioning_demo.f90  pdf_coordinate_validation.f90  subplots_grid_demo.f90  test_constant_data.f90  test_gltf_output.f90  test_missing_markers_986.f90  test_pdf_debug.f90  test_pdf_scale_regression.f90  ylabel_comparison.f90
example/user_compilation_examples/cmake_project_template/: CMakeLists.txt  README.md
example/user_compilation_examples/cmake_project_template/src/: cmake_template_demo.f90
examples/: subplots_demo.f90
scripts/: analyze_matplotlib_positioning.py  check_no_root_artifacts.sh  check_root_artifacts.sh  clean_example_docs_utf8.sh  compile_special_examples.sh  fix_example_docs.py  generate_example_docs.py  git_prune.sh  integrate_example_media.py  issue_branch.sh  issue_check_relevance.sh  issue_loop.sh  issue_open_pr.sh  issue_orchestrate_auto.sh  oracle_3d_tick_labels.py  oracle_subplot_ylabel_spacing.py  pdf_expect_token.py  pdf_scan_rg.py  pr_ci_status.sh  pr_cleanup.sh  pr_merge.sh  rescue_backlog_commits.sh  sync_backlog_state.sh  test_directory_organization_limits.py  test_no_tracked_python_bytecode.sh  test_pcolormesh_guard.sh  test_pdf_axes_color_black.py  test_pdf_text_visibility.py  test_python_bridge_example.sh  test_python_bridge_security.py  test_python_examples.py  test_python_field_plots.py  test_python_pcolormesh_via_bridge.py  test_python_scales_via_bridge.py  test_python_scales_via_render.py  test_python_scatter_kwargs.py  test_python_streamplot_via_bridge.py  test_spec_parity.py  test_test_ci_artifact_gate.sh  test_validate_github_pages_images.sh  (+7 more)
src/: figure_module.f90  fortplot.f90  fortplot_3d_axes.f90  fortplot_3d_projection.f90  fortplot_animation.f90  fortplot_animation_constants.f90  fortplot_animation_core.f90  fortplot_animation_pipeline.f90  fortplot_animation_rendering.f90  fortplot_animation_validation.f90  fortplot_annotations.f90  fortplot_ascii.f90  fortplot_ascii_elements.f90  fortplot_ascii_utils.f90  fortplot_axes.f90  fortplot_bitmap.f90  fortplot_bmp.f90  fortplot_c_interface.c  fortplot_colormap.f90  fortplot_colors.f90  fortplot_constants.f90  fortplot_context.f90  fortplot_contour_algorithms.f90  fortplot_contour_regions.f90  fortplot_coordinate_validation.f90  fortplot_coordinates.f90  fortplot_doc_examples.f90  fortplot_doc_files.f90  fortplot_doc_media.f90  fortplot_doc_paths.f90  fortplot_doc_processor.f90  fortplot_doc_text.f90  fortplot_documentation.f90  fortplot_errors.f90  fortplot_fast_io.f90  fortplot_figure.f90  fortplot_figure_accessors.f90  fortplot_figure_base.f90  fortplot_figure_boxplot.f90  fortplot_figure_compatibility.f90  (+118 more)
test/: check_documentation_structure.sh  debug_legend_crash.f90  debug_png_test.f90  debug_stb_positioning.f90  debug_streamplot_circular.f90  debug_streamplot_simple.f90  debug_symlog_data.f90  fortplot_imagemagick.f90  fortplot_png_validation.f90  fortplot_spy_backend.f90  fortplot_test_helpers.f90  fortplot_test_utilities.f90  ref_matplotlib.py  ref_matplotlib_3d.py  test_1191_xaxis_fix.f90  test_3d.f90  test_3d_axes.f90  test_3d_axes_pdf_ticks.f90  test_3d_axes_projection.f90  test_3d_plot_data_storage.f90  test_3d_png.f90  test_3d_projection.f90  test_3d_tick_orientation.f90  test_aaf_scaling_stb.f90  test_add_3d_plot_api.f90  test_add_surface_api.f90  test_all_modules.f90  test_animation.f90  test_animation_clear_regression.f90  (+626 more)
(+1029 files in other folders)
