[build-system]
requires = ["scikit-build-core", "cmake", "numpy", "f90wrap>=0.2.16"]
build-backend = "scikit_build_core.build"

[project]
name = "fortplot"
version = "0.0.0"
dependencies = ["numpy", "f90wrap>=0.2.16"]

[tool.scikit-build]
build-dir = "build_cmake"
cmake.verbose = true
cmake.args = ["-DENABLE_PYTHON=ON"]
wheel.py-api = "py3"
sdist.include = ["python/**"]
wheel.packages = ["python/fortplot"]
wheel.install-dir = "fortplot"
