[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fortplot"
version = "2025.6.25"
description = "Python interface to the fortplot scientific plotting library"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
numpy = ["numpy"]

[tool.setuptools.packages.find]
where = ["python"]
include = ["fortplot*"]
